--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,15 +1,11 @@
 <nav class="nav nav-pills flex-column flex-sm-row sgrid-N">
   <div class="sticky-top text">  <img src="../../assets/img/logo.png"> <img src="../../assets/img/В твоих руках.png"> </div>
-  <div class="mx-auto" style="width: 300px;">
-    <section class="portfolio-experiment">
-      <a>
-        <span class="text">Хочу помочь</span>
-        <span class="line -right"></span>
-        <span class="line -top"></span>
-        <span class="line -left"></span>
-        <span class="line -bottom"></span>
-      </a>
-    </section>
+  <div class="mx-auto" style="width: 200px;">
+    <div class="box-3">
+      <div class="btn btn-three">
+        <span>ХОЧУ ПОМОЧЬ</span>
+      </div>
+    </div>
   </div>
 
   <div class="sticky-top text" id="right">2 040 223 рублей вы пожертвовали в марте  <br />на помощь детям</div>
