--- a/src/app/top/top.component.scss
+++ b/src/app/top/top.component.scss
@@ -6,144 +6,74 @@
   padding-left: 20px;
 }
 
-#right { text-align: right; }
-
-
-$thick : 3px;
-$pad : 0.7em;
-$extra : calc(#{$pad} * 1.2);
-$color : #65adc1;
-
-
-.portfolio-experiment {
-  background: white;
-  padding:20px;
-
-  a {
-    color: black;
-    padding: $pad $extra;
-    display: inline-block;
-    border: $thick solid transparent;
-    position: relative;
-    font-size: 1.5em;
-    cursor: pointer;
-    letter-spacing: 0.07em;
-
-    .text {
-      // padding: 0 0.3em;
-      font-family: proxima-nova, monospace;
-      transform: translate3d(0,$pad,0);
-      display: block;
-      transition: transform 0.4s cubic-bezier(.2,0,0,1) 0.4s;
-    }
-
-    &:after {
-      position: absolute;
-      content: '';
-      bottom: -$thick;
-      left: $extra;
-      right: $extra;
-      height: $thick;
-      background: $color;
-      // z-index: -1;
-      transition:
-        transform 0.8s cubic-bezier(1,0,.37,1) 0.2s,
-        right 0.2s cubic-bezier(.04,.48,0,1) 0.6s,
-        left 0.4s cubic-bezier(.04,.48,0,1) 0.6s;
-      transform-origin: left;
-    }
-
-  }
-
-  .line {
-    position: absolute;
-    background: $color;
-
-    &.-right,
-    &.-left {
-      width: $thick;
-      bottom: -$thick;
-      top: -$thick;
-      transform: scale3d(1,0,1);
-    }
-
-    &.-top,
-    &.-bottom {
-      height: $thick;
-      left: -$thick;
-      right: -$thick;
-      transform: scale3d(0,1,1);
-    }
-
-    &.-right {
-      right: -$thick;
-      transition: transform 0.1s cubic-bezier(1,0,.65,1.01) 0.23s;
-      transform-origin: top;
-    }
-
-    &.-top {
-      top: -$thick;
-      transition: transform 0.08s linear 0.43s;
-      transform-origin: left;
-    }
-
-    &.-left {
-      left: -$thick;
-      transition: transform 0.08s linear 0.51s;
-      transform-origin: bottom;
-    }
-
-    &.-bottom {
-      bottom: -$thick;
-      transition: transform 0.3s cubic-bezier(1,0,.65,1.01);
-      transform-origin: right;
-    }
-  }
-
-  a:hover,
-  a:active {
-
-    .text {
-      transform: translate3d(0,0,0);
-      transition: transform 0.6s cubic-bezier(.2,0,0,1) 0.4s;
-    }
-
-    &:after {
-      transform: scale3d(0,1,1);
-      right: -$thick;
-      left: -$thick;
-      transform-origin: right;
-      transition:
-        transform 0.2s cubic-bezier(1,0,.65,1.01) 0.17s,
-        right 0.2s cubic-bezier(1,0,.65,1.01),
-        left 0s 0.3s;
-    }
-
-    .line {
-      transform: scale3d(1,1,1);
-
-      &.-right {
-        transition: transform 0.1s cubic-bezier(1,0,.65,1.01) 0.2s;
-        transform-origin: bottom;
-      }
-
-      &.-top {
-        transition: transform 0.08s linear 0.4s;
-        transform-origin: right;
-      }
-
-      &.-left {
-        transition: transform 0.08s linear 0.48s;
-        transform-origin: top;
-      }
-
-      &.-bottom {
-        transition: transform 0.5s cubic-bezier(0,.53,.29,1) 0.56s;
-        transform-origin: left;
-      }
-    }
-
-  }
+.mx-auto {
+  margin-top: 40px;
+  margin-bottom: -50px;
+  width: 200px;
+  height: 150px;
 }
 
+#right { text-align: right; }
 
+@import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
+
+html,
+body {
+  font-family: 'Open Sans Condensed', sans-serif;
+}
+
+div[class*=box] {
+  height: 33.33%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box-3 { background-color: #65adc1; }
+
+.btn {
+  line-height: 50px;
+  height: 55px;
+  text-align: center;
+  width: 220px;
+  cursor: pointer;
+}
+
+.btn-three {
+  color: #FFF;
+  transition: all 0.5s;
+  position: relative;
+}
+.btn-three::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(255,255,255,0.1);
+  transition: all 0.3s;
+}
+.btn-three:hover::before {
+  opacity: 0 ;
+  transform: scale(0.5,0.5);
+}
+.btn-three::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border: 1px solid rgba(255,255,255,0.5);
+  transform: scale(1.2,1.2);
+}
+.btn-three:hover::after {
+  opacity: 1;
+  transform: scale(1,1);
+}
