--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,14 +7,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="" routerLinkActive="active">Главная <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           О фонде
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">История</a>
+          <a class="dropdown-item" routerLink="/about" routerLinkActive="active">История</a>
           <a class="dropdown-item" href="#">Друзья и партнеры</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Реквизиты</a>
@@ -46,3 +46,4 @@
     </form>
   </div>
 </nav>
+<router-outlet></router-outlet>
