--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -7,27 +7,27 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://homeless.ru/upload/resize_cache/iblock/bdc/740_400_2/003_BNK_NightBus_Olga_SPB_082017_008_1280x8533.jpg" alt="First slide">
+      <img class="d-block w-100" src="https://images.wallpaperscraft.ru/image/deti_osen_trava_listya_druzya_80187_1920x1080.jpg" alt="First slide">
       <div class="carousel-caption d-none d-md-block block">
-        <p>«Когда Ночной автобус  ломается, а он в последнее время часто ломается, мы приходим сюда, а тут ничего. Как вы думаете, с какими...</p>
+        <p>Помочь семьям, которые оказались в тяжелой жизненной ситуации. Мы поддерживаем родителей, чтобы дети не попадали в детские дома.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://homeless.ru/upload/resize_cache/iblock/1c5/740_400_2/Nochleshka_Vera_Solnseva_11_Alexey_Loshchilov_1_100280x854.jpg" alt="Second slide">
+      <img class="d-block w-100" src="https://99px.ru/sstorage/53/2016/05/tmb_164393_7845.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block block">
-        <p>Вере Егоровне 79 лет, она — блокадник и инвалид второй группы. И уже несколько лет пытается встать на учет для получения...</p>
+        <p>Мы помогаем детям-сиротам получить необходимое лечение, персональное внимание и заботу, поддерживаем подростков в учебе и выборе профессии.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://homeless.ru/upload/resize_cache/iblock/c14/740_400_2/Nikolai_Vaulin11.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-md-block block">
-        <p>«...вот как выходит: всю жизнь отработал, знал, что тебя завтра ждет, получал зарплату честно, а потом оказалось, что ничего не ждет, и, ...</p>
+      <img class="d-block w-100" src="http://winallos.com/uploads/posts/2014-10/1413749887_nastroeniya-semya-mama-papa.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block block">Каждый год в России 4 тысячи родителей отказываются от детей, 40 тысяч лишаются родительских прав, 150 тысяч детей постоянно живут в сиротских учреждениях.
+        <p></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://homeless.ru/upload/resize_cache/iblock/844/740_400_2/Natalia_001.jpg" alt="Forth slide">
+      <img class="d-block w-100" src="http://usiter.com/uploads/20111211/deti+malishi+deti+oboi+rebenok+15570679712.jpg" alt="Forth slide">
       <div class="carousel-caption d-none d-md-block block">
-        <p>Наташе до сих пор не верится, что 16 лет жизни на улице закончились хэппи-эндом: теперь у нее есть любимый мужчина и крыша над...</p>
+        <p>Мы создаем анкеты детей-сирот, проводим консультации и семинары для принимающих семей и поддерживаем тех, кто берет детей с особенностями развития.</p>
       </div>
     </div>
   </div>
