new main page, active buttons and some changes on the page "parent"

--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,4 +1,5 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="leftcol">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -19,7 +20,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="http://winallos.com/uploads/posts/2014-10/1413749887_nastroeniya-semya-mama-papa.jpg" alt="Third slide">
+      <img class="d-block w-100" src="https://img3.goodfon.ru/original/1920x1080/b/b7/family-deti-roditeli-skamya.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block block">Каждый год в России 4 тысячи родителей отказываются от детей, 40 тысяч лишаются родительских прав, 150 тысяч детей постоянно живут в сиротских учреждениях.
         <p></p>
       </div>
@@ -39,4 +40,23 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+</div>
+</div>
+
+<div id="rightcol">
+  <img src="../../assets/img/cloud.png" height="170">
+  <br />
+  <br />
+  <div> <p align="justify">
+    &nbsp;&nbsp;&nbsp;&nbsp;Благотворительному фонду "В твоих руках" уже более 10 лет,
+    и за это время из небольшого волонтерского движения он превратился в организацию,
+    которая системно и профессионально решает проблему социального сиротства в России.
+    <br /> &nbsp;&nbsp;&nbsp;&nbsp;Мы помогаем  детям-сиротам в
+    детских домах и больницах, ищем им приемных родителей и поддерживаем кровные семьи в трудной жизненной ситуации, чтобы дети
+    не попадали в детдома. Мы работаем, чтобы менять будущее для детей, а значит, и для всех нас. Присоединяйтесь!
+  </p>
+  </div>
+  <div class="container">
+    <a routerLink="/history" routerLinkActive="active"><button id="button" class="btn btn1">Узнать больше</button></a>
+  </div>
 </div>
