--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,8 +1,8 @@
 <nav class="nav nav-pills flex-column flex-sm-row sgrid-N">
-  <div>
-    +7 (812) 407-30-90 <br />
-    СПб, ул. Боровая, 112Б
-   
+  <div class="phonemail">
+    <img src="../../assets/img/phone.png" width="20" height="20"> &nbsp; +7 (812) 307-47-18 <br />
+    <img src="../../assets/img/mail.png" width="20" height="20"> &nbsp;info@vtvoihrukah.ru
+
   </div>
 
   <div class="mx-auto mar">
@@ -20,7 +20,7 @@
         <a target="_blank" href="https://www.instagram.com/nochlezhka/"><img src="../../assets/img/insta.png" width="35" height="35"></a>
 
         <a target="_blank" href="https://www.ok.ru/nochlezhka"><img src="../../assets/img/ok.png" width="35" height="35"></a>
-     
+
 
   </div>
 </nav>
