--- a/src/app/parents/parents.component.html
+++ b/src/app/parents/parents.component.html
@@ -1,6 +1,6 @@
-  <h1>
-    Welcome to parents
-  </h1>
-  
-  
-<router-outlet></router-outlet> 
+<h1>
+  ПРИЕМНЫМ РОДИТЕЛЯМ
+</h1>
+<div>Мы поддерживаем принимающих родителей: уже состоявшиеся приемные семьи и тех, кто еще только готовится ими стать. Вы можете обратиться за помощью специалистов нашего фонда.
+
+<router-outlet></router-outlet>
