--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -1,6 +1,118 @@
 .block {
   background-color: rgba(0,0,0,0.4);
-  width: 80%;
+  width: 70%;
   margin: auto;
   border-radius: 10px;
+}
+
+#leftcol {
+  float: left;
+  width: 70%;
+}
+#rightcol {
+  text-align: center;
+  padding-right: 25px;
+  padding-top: 25px;
+  padding-left: 5px;
+  margin-left: 71%;
+}
+
+$gray: #bbbbbb;
+
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  height: 40px;
+  text-align: center;
+}
+
+.btn {
+  color: #83d2fc; /* Text color */
+  background: transparent; /* Remove background color */
+  border: 2px solid #83d2fc; /* Border thickness, line style, and color */
+  border-radius: 70px; /* Adds curve to border corners */
+  text-decoration: none;
+  text-transform: uppercase; /* Make letters uppercase */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.btn1 {
+  background-color: white;
+  color: #424242;
+  border: 2px solid #83d2fc;
+}
+.btn1:hover {
+  background-color: #83d2fc;
+  color: white;
+}
+
+b {
+  outline:none;
+  height: 40px;
+  text-align: center;
+  width: 130px;
+  border-radius:100px;
+  background: #fff;
+  border: 2px solid #83d2fc;
+  color: #83d2fc;
+  letter-spacing:1px;
+  text-shadow:0;
+  font:{
+    size:12px;
+    weight:bold;
+  }
+  cursor: pointer;
+  transition: all 0.25s ease;
+
+  &:active {
+    letter-spacing: 2px ;
+  }
+  &:after {
+    content:"";
+  }
+}
+.onclic {
+  width: 10px !important;
+  height: 70px !important;
+  border-radius: 50% !important;
+  border-color:$gray;
+  border-width:4px;
+  font-size:0;
+  border-left-color: #83d2fc;
+  animation: rotating 2s 0.25s linear infinite;
+  &:hover {
+    color: dodgerblue;
+    background: white;
+  }
+}
+.validate {
+  content:"";
+  font-size:16px;
+  color: black;
+  background: dodgerblue;
+  border-radius: 50px;
+  &:after {
+    font-family:'FontAwesome';
+    content:" done \f00c";
+  }
+}
+
+@keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
