--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -1,10 +1,17 @@
 .sgrid-N {
+  background-color: #424242;
+  width: 100%;
   min-height: 1px;
   padding: 10px;
   padding-right: 20px;
   padding-left: 10px;
+  color: white;
 }
 
 .mar {
   margin: auto;
+}
+
+.phonemail {
+  padding-top: 5px;
 }
