--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,14 +1,10 @@
 <nav class="nav nav-pills flex-column flex-sm-row sgrid-N">
   <div class="sticky-top text">  <img src="../../assets/img/logo.png"> <img src="../../assets/img/В твоих руках.png"> </div>
   <div class="mx-auto" style="width: 200px;">
-    <a href="/" class="btn btn-1">
-      <svg>
-        <rect x="0" y="0" fill="none" width="100%" height="100%"/>
-      </svg>
-      Пожертвовать
-    </a>
-    
+    <div class="container">
+      <a routerLink="/requisites" routerLinkActive="active"><button id="button" class="btn btn1">Пожертвовать</button></a>
+    </div>
   </div>
 
-  <div class="sticky-top text" id="right">2 040 223 рублей вы пожертвовали в марте  <br />на помощь детям </div>
+  <div class="count" id="right">2 040 223 рублей вы пожертвовали в августе<br />на помощь детям </div>
 </nav>
