--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,2 +1,19 @@
-  
+<div class="pages"> Вы чувствуете, что хотели бы не только передавать помощь, но и стать нашим постоянным помощником?
+<br/><br/>
+<b>Первое</b>, что нужно сделать, это оценить свое время и силы. Главное правило — сделать это после того, как первая самая сильная эмоция уйдет. Только тогда вы сможете ответить себе на вопрос: а что я могу сделать лично и сколько своего личного времени я смогу выделять на это регулярно?
+<br/><br/>
+<b>Второе</b>, почитать и подумать, готовы ли вы стать волонтером, подходит ли это именно вам.
+<br/><br/>
+<b>Третье</b> — заполнить анкету на нашем сайте. Узнать, когда ближайшая встреча волонетров. Прочитать список вакансий , может именно ваши профессиональные качества окажутся очень востребованны.
+<br/><br/>
+Самое главное, отнестись к возможности стать волонтером со всей серьезностью и отвественностью. Наша общая работа, как калейдоском, складывается из сотен ваших волонтерских работ. И то, что у нас получается или не получается, это результат действия всех и каждого из нас.
+<br/><br/>
+Не обижайтесь, если вы сразу не получили ответ на свою анкету. Возможны некоторые накладки. Не стесняйтесь, отправьте анкету второй раз, может она потерялась. 
+<br/><br/>
+Самое лучшее — начать с "малых" дел, с помощи кому-нибудь из давно работающих волонетров, например, помочь нам в сортировке вещей или поиске информации.
+<br/>
+А может быть, наиболее эффективной помощью станет применение ваших профессиональных навыков.
+<br/>
+Или, наоборот, дело, делекое от профессиональных занятий, окажется именно тем, что приносит и удовлетворение и пользу.
+</div>
 <router-outlet></router-outlet> 
