--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -1,6 +1,25 @@
-  <h1>
+<div class="pages">
+   <h1>
   МИССИЯ И ИСТОРИЯ
   </h1>
-  <div>Содействовать решению проблем социального сиротства, обеспечить равные права на семью и детство для всех детей, живущих в нашей стране. Развивать идеи личной ответственности и личного участия каждого в созидании нашего общества. Способствовать развитию идей гражданской ответственности, активной жизненной позиции, милосердия, взаимопомощи, равенства и справедливости.</div>
-  <div>Наш фонд вырос из общественного движения, возникшего в конце 2004 года как реакция на чудовищную ситуацию с отказниками - детьми, оставшимися без заботы своих родителей и помощи государства, вынужденными проживать свою маленькую жизнь в больничных палатах. В 2007 году был зарегистрирован благотворительный фонд «Волонтеры в помощь детям-сиротам». </div>
+ 
+Миссия — содействовать решению проблем социального сиротства, обеспечить равные права на семью и детство для всех детей, живущих в нашей стране. Развивать идеи личной ответственности и личного участия каждого в созидании нашего общества. Способствовать развитию идей гражданской ответственности, активной жизненной позиции, милосердия, взаимопомощи, равенства и справедливости.
+<br/><br/>
+Наш фонд вырос из общественного движения, возникшего в конце 2004 года как реакция на чудовищную ситуацию с отказниками - детьми, оставшимися без заботы своих родителей и помощи государства, вынужденными проживать свою маленькую жизнь в больничных палатах. В 2007 году был зарегистрирован благотворительный фонд «Волонтеры в помощь детям-сиротам».
+
+</div>
+<app-carousel2></app-carousel2>
+<div class="pages">
+
+<b>Наше настоящее:</b>
+<br/><br/> 
+С того времени многое изменилось: и положение детей без родительского попечения в больницах, и наше понимание истоков проблемы и путей ее правильного решения.
+<br/><br/> 
+Мы осознали, что помощь должна основываться на знании, а не на эмоциях, что работать надо над причинами, а не разгребать последствия. Что только системный подход к оказанию помощи способен привести к изменениям в будущем.
+<br/><br/> 
+Сегодня у фонда множество программ по четырем основным направлениям – профилактика социального сиротства, помощь детям в учреждениях, содействие семейному устройству, работа над изменением законодательства, общественного мнения и всей системы коллективных учреждений для детей-сирот.
+<br/><br/> 
+Наш фонд стал одним из инициаторов и участников работы над новым положением федерального закона №481, запустившим в 2015 году полную реформу сиротских учреждений в стране.
+</div>
+
 <router-outlet></router-outlet> 
