--- a/src/app/parents/parents.component.html
+++ b/src/app/parents/parents.component.html
@@ -1,8 +1,8 @@
-<div class="parents">
+<div class="pages">
   <h1>ПРИЕМНЫМ РОДИТЕЛЯМ</h1>
-  <div>Мы поддерживаем принимающих родителей: уже состоявшиеся приемные семьи и тех,
+  Мы поддерживаем принимающих родителей: уже состоявшиеся приемные семьи и тех,
     кто еще только готовится ими стать. Вы можете обратиться за помощью специалистов нашего фонда.
-  </div>
+  <br/> 
     <ul>
       <li><b>Информационный центр "Дети в семье"</b>: любые вопросы, касающиеся семейного устройства,
         можно задать консультантам нашей горячей линии по телефону 8-800-700-88-05.
@@ -17,7 +17,7 @@
       </li>
       <li>
         На сайте проекта "Территория без сирот"
-        <a href="www.opekaweb.ru">www.opekaweb.ru</a>  можно найти фото- и видеоанкеты детей-сирот, которым
+        <a href="http://opekaweb.ru/">www.opekaweb.ru</a>  можно найти фото- и видеоанкеты детей-сирот, которым
         необходима семья.
       </li>
       <li>Мы поддерживаем приемных родителей в лечении и реабилитации детей с особенностями развития
