--- a/src/app/requisites/requisites.component.html
+++ b/src/app/requisites/requisites.component.html
@@ -1,2 +1,20 @@
-  
+<div class="pages">
+      
+    <h1>РЕКВИЗИТЫ <img src="../../assets/img/req.PNG" ></h1>
+<b>СБЕРБАНК </b>
+<br/>
+Получатель: Благотворительный фонд "Волонтеры в помощь детям-сиротам"
+<br/>
+ИНН ********
+<br/>
+КПП ********
+<br/>
+р/с ******************** в Московском банке Сбербанка России ПАО г.Москва
+<br/>
+к/с  ********************
+<br/>
+БИК *********
+<br/> 
+Если пожертвование переводится от нерезидента, то следует указывать код валютной операции: 70030
+</div> 
 <router-outlet></router-outlet> 
