--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,10 +1,10 @@
 <div id="leftcol">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" data-interval="200"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1" data-interval="200"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2" data-interval="200"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3" data-interval="200"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
