page "parents" is ready

--- a/src/app/parents/parents.component.html
+++ b/src/app/parents/parents.component.html
@@ -2,7 +2,7 @@
   <h1>ПРИЕМНЫМ РОДИТЕЛЯМ</h1>
   Мы поддерживаем принимающих родителей: уже состоявшиеся приемные семьи и тех,
     кто еще только готовится ими стать. Вы можете обратиться за помощью специалистов нашего фонда.
-  <br/> 
+  <br/>
     <ul>
       <li><b>Информационный центр "Дети в семье"</b>: любые вопросы, касающиеся семейного устройства,
         можно задать консультантам нашей горячей линии по телефону 8-800-700-88-05.
@@ -23,7 +23,51 @@
       <li>Мы поддерживаем приемных родителей в лечении и реабилитации детей с особенностями развития
         и сложными заболеваниями в рамках <b>проекта "Близкие люди"</b>.</li>
     </ul>
-  <img src="../../assets/img/mother-and-daughter2.jpg" width="100%">
+  <div class="image"><img src="../../assets/img/panorama.jpg" width="100%"></div>
+  Мы проводим медиации между приемной и кровной семьей , способствуя разрешению конфликтов и споров между опекунами и кровными
+  родственниками, снижая возможные травматичные последствия для ребенка. По любым вопросам, связанным с медиацией, вы можете обратиться
+  к нашему психологу, специалисту по медиации, Гусаровой Наталье — 8 (903) 797-03-24.
+  <br /><br />
+  <table class="table">
+    <tbody>
+    <tr>
+      <td class="leftcol" align="right"><a href=""><img src="../../assets/img/bear.jpg" width= "90%"></a></td>
+      <td><h5>ПРОЕКТ "БЛИЗКИЕ ЛЮДИ"</h5>
+        Проект "Близкие люди" помогает семьям, принявшим на воспитание детей с особенностями развития, со сложными или редкими заболеваниями
+        в решении многочисленных вопросов, связанных с состоянием здоровья и системой реабилитации ребенка.
+        <br /><br />
+        <a href=""><u>Узнать больше</u></a>
+      </td>
+    </tr>
+    <tr>
+      <td align="right"><a href=""><img src="../../assets/img/infcenter.jpg" width= "90%"></a></td>
+      <td><h5>ПРОЕКТ "ИНФОРМАЦИОННЫЙ ЦЕНТР "ДЕТИ В СЕМЬЕ"</h5>
+        Специалисты проекта оказывают юридическую, психологическую, информационную помощь как семьям, которые только готовятся к воспитанию
+        ребенка-сироты, так и состоявшимся приемным родителям.
+        <br /><br />
+        <a href=""><u>Узнать больше</u></a>
+      </td>
+    </tr>
+    <tr>
+      <td align="right"><a href=""><img src="../../assets/img/boy-with-toy.jpg" width= "90%"></a></td>
+      <td><h5>ПРОЕКТ "ТЕРРИТОРИЯ БЕЗ СИРОТ"</h5>
+        Мы оказываем содействие в распространении информации о детях-сиротах и детях, оставшихся без попечения родителей, а также информационную
+        и методическую поддержку муниципальным органам опеки и попечительства.
+        <br /><br />
+        <a href=""><u>Узнать больше</u></a>
+      </td>
+    </tr>
+    <tr>
+      <td align="right"><a href=""><img src="../../assets/img/dad-and-son.jpg" width= "90%"></a></td>
+      <td><h5>ШКОЛА ПРИЕМНЫХ РОДИТЕЛЕЙ</h5>
+        Кандидаты в приемные родители, которые планируют взять ребенка и ранее не обучались в ШПР, могут пройти общий курс подготовки. Cемьи, которые
+        готовы стать временной поддержкой для ребенка, могут посетить краткосрочные модули.
+        <br /><br />
+        <a href=""><u>Узнать больше</u></a>
+      </td>
+    </tr>
+    </tbody>
+  </table>
 
 </div>
 <router-outlet></router-outlet>
