--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,6 @@
-<div class="pages"> Вы чувствуете, что хотели бы не только передавать помощь, но и стать нашим постоянным помощником?
+<div class="pages">
+<h1>О РАБОТЕ ВОЛОНТЕРАМИ</h1>  
+Вы чувствуете, что хотели бы не только передавать помощь, но и стать нашим постоянным помощником?
 <br/><br/>
 <b>Первое</b>, что нужно сделать, это оценить свое время и силы. Главное правило — сделать это после того, как первая самая сильная эмоция уйдет. Только тогда вы сможете ответить себе на вопрос: а что я могу сделать лично и сколько своего личного времени я смогу выделять на это регулярно?
 <br/><br/>
@@ -16,4 +18,15 @@
 <br/>
 Или, наоборот, дело, делекое от профессиональных занятий, окажется именно тем, что приносит и удовлетворение и пользу.
 </div>
+<div class="jumbotron">
+        <p>Если Вы решили, что готовы <strong>стать волонтером</strong> нажимайте кнопку ниже и заполняйте анкету! Мы Вас ждем!</p>
+        <p>
+               
+                 <a routerLink="/anketa" routerLinkActive="active"><button id="button" class="btn btn1">Заполнить анкету</button></a>
+                 
+        </p>
+      </div>
+      
+
+
 <router-outlet></router-outlet> 
