--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -1,6 +1,6 @@
 <div class="pages">
    <h1>
-  МИССИЯ И ИСТОРИЯ
+ИСТОРИЯ И МИССИЯ
   </h1>
  
 Миссия — содействовать решению проблем социального сиротства, обеспечить равные права на семью и детство для всех детей, живущих в нашей стране. Развивать идеи личной ответственности и личного участия каждого в созидании нашего общества. Способствовать развитию идей гражданской ответственности, активной жизненной позиции, милосердия, взаимопомощи, равенства и справедливости.
@@ -11,7 +11,7 @@
 <app-carousel2></app-carousel2>
 <div class="pages">
 
-<b>Наше настоящее:</b>
+<strong>Наше настоящее:</strong>
 <br/><br/> 
 С того времени многое изменилось: и положение детей без родительского попечения в больницах, и наше понимание истоков проблемы и путей ее правильного решения.
 <br/><br/> 
