--- a/src/app/parents/parents.component.html
+++ b/src/app/parents/parents.component.html
@@ -4,13 +4,13 @@
     кто еще только готовится ими стать. Вы можете обратиться за помощью специалистов нашего фонда.
   <br/> 
     <ul>
-      <li><b>Информационный центр "Дети в семье"</b>: любые вопросы, касающиеся семейного устройства,
+      <li><strong>Информационный центр "Дети в семье"</strong>: любые вопросы, касающиеся семейного устройства,
         можно задать консультантам нашей горячей линии по телефону 8-800-700-88-05.
         Также есть возможность получить очные консультации психологов, юристов,
         дефектологов/логопедов в офисе фонда по предварительной записи.
         Запись необходимо произвести по телефону 8(985)9985975 (будни с 9 до 18).
       </li>
-      <li><b>Школа приемных родителей</b>: мы проводим обучение потенциальных приемных родителей,
+      <li><strong>Школа приемных родителей</strong>: мы проводим обучение потенциальных приемных родителей,
         которые готовы стать временной поддержкой для ребенка и его семьи для того, чтобы дети не
         попадали в сиротские учреждения. В том случае, если их кровные или приемные родители оказались
         в сложной жизненной ситуации.
@@ -21,7 +21,7 @@
         необходима семья.
       </li>
       <li>Мы поддерживаем приемных родителей в лечении и реабилитации детей с особенностями развития
-        и сложными заболеваниями в рамках <b>проекта "Близкие люди"</b>.</li>
+        и сложными заболеваниями в рамках <strong>проекта "Близкие люди"</strong>.</li>
     </ul>
   <img src="../../assets/img/mother-and-daughter2.jpg" width="100%">
 
