--- a/src/app/anketa/anketa.component.html
+++ b/src/app/anketa/anketa.component.html
@@ -1,2 +1,18 @@
-  
+<div class="row">
+
+        <div class="col-md-6">
+          <h1>АНКЕТА</h1>
+          <form>
+            <div class="form-group">
+              <label for="email">Email address:</label>
+              <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+            </div>
+            <div class="form-group">
+              <label for="pwd">Password:</label>
+              <input type="password" class="form-control" id="pwd" name="passowrd" [(ngModel)]="password">
+            </div>
+            <button id="button" class="btn btn1">Отправить</button>
+          </form>
+        </div>
+      </div>
 <router-outlet></router-outlet> 
