--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,4 @@
-.carousel {
-  width: 60%;
-  margin: auto;
-  padding: 0px 0px 20px 20px;
-}
+
 .pages {
   padding: 15px;
   padding-right: 40px;
@@ -14,5 +10,33 @@ ul {
 
 li {
   padding-top: 10px;
+}
+.btn {
+  color: #83d2fc; /* Text color */
+  background: transparent; /* Remove background color */
+  border: 2px solid #83d2fc; /* Border thickness, line style, and color */
+  border-radius: 70px; /* Adds curve to border corners */
+  text-decoration: none;
+  text-transform: uppercase; /* Make letters uppercase */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.btn1 {
+  background-color: white;
+  color: #424242;
+  border: 2px solid #83d2fc;
+}
+.btn1:hover {
+  background-color: #83d2fc;
+  color: white;
 }
 
