--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -28,6 +28,106 @@ $gray: #bbbbbb;
   text-align: center;
 }
 
+b {
+  outline:none;
+  height: 40px;
+  text-align: center;
+  width: 130px;
+  border-radius:100px;
+  background: #fff;
+  border: 2px solid #83d2fc;
+  color: #83d2fc;
+  letter-spacing:1px;
+  text-shadow:0;
+  font:{
+    size:12px;
+    weight:bold;
+  }
+  cursor: pointer;
+  transition: all 0.25s ease;.block {
+    background-color: rgba(0,0,0,0.4);
+    width: 70%;
+    margin: auto;
+    border-radius: 10px;
+  }
+  
+  
+  
+  $gray: #bbbbbb;
+  
+  * {
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  
+  .container {
+    height: 40px;
+    text-align: center;
+  }
+  
+  
+  b {
+    outline:none;
+    height: 40px;
+    text-align: center;
+    width: 130px;
+    border-radius:100px;
+    background: #fff;
+    border: 2px solid #83d2fc;
+    color: #83d2fc;
+    letter-spacing:1px;
+    text-shadow:0;
+    font:{
+      size:12px;
+      weight:bold;
+    }
+    cursor: pointer;
+    transition: all 0.25s ease;
+  
+    &:active {
+      letter-spacing: 2px ;
+    }
+    &:after {
+      content:"";
+    }
+  }
+  
+  
+
+  &:active {
+    letter-spacing: 2px ;
+  }
+  &:after {
+    content:"";
+  }
+}
+.onclic {
+  width: 10px !important;
+  height: 70px !important;
+  border-radius: 50% !important;
+  border-color:$gray;
+  border-width:4px;
+  font-size:0;
+  border-left-color: #83d2fc;
+  animation: rotating 2s 0.25s linear infinite;
+  &:hover {
+    color: dodgerblue;
+    background: white;
+  }
+}
+
+.validate {
+  content:"";
+  font-size:16px;
+  color: black;
+  background: dodgerblue;
+  border-radius: 50px;
+  &:after {
+    font-family:'FontAwesome';
+    content:" done \f00c";
+  }
+}
+
 .btn {
   color: #83d2fc; /* Text color */
   background: transparent; /* Remove background color */
@@ -57,56 +157,6 @@ $gray: #bbbbbb;
   color: white;
 }
 
-b {
-  outline:none;
-  height: 40px;
-  text-align: center;
-  width: 130px;
-  border-radius:100px;
-  background: #fff;
-  border: 2px solid #83d2fc;
-  color: #83d2fc;
-  letter-spacing:1px;
-  text-shadow:0;
-  font:{
-    size:12px;
-    weight:bold;
-  }
-  cursor: pointer;
-  transition: all 0.25s ease;
-
-  &:active {
-    letter-spacing: 2px ;
-  }
-  &:after {
-    content:"";
-  }
-}
-.onclic {
-  width: 10px !important;
-  height: 70px !important;
-  border-radius: 50% !important;
-  border-color:$gray;
-  border-width:4px;
-  font-size:0;
-  border-left-color: #83d2fc;
-  animation: rotating 2s 0.25s linear infinite;
-  &:hover {
-    color: dodgerblue;
-    background: white;
-  }
-}
-.validate {
-  content:"";
-  font-size:16px;
-  color: black;
-  background: dodgerblue;
-  border-radius: 50px;
-  &:after {
-    font-family:'FontAwesome';
-    content:" done \f00c";
-  }
-}
 
 @keyframes rotating {
   from {
